[gd_scene load_steps=5 format=3 uid="uid://dibywpu611e40"]

[ext_resource type="Script" path="res://levels/main_menu/main_menu.gd" id="1_ibowr"]
[ext_resource type="Texture2D" uid="uid://pkwk4kd62wwd" path="res://assets/tiles_and_background_foreground/main_menu.jpg" id="2_be50o"]
[ext_resource type="FontFile" uid="uid://ct0ixhr7x64ng" path="res://assets/fonts/vinque.tres" id="3_u5y8d"]
[ext_resource type="Texture2D" uid="uid://cgmk5pu2pt56a" path="res://assets/tiles_and_background_foreground/Tiny.png" id="4_cl88h"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ibowr")

[node name="MainMenu" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(550, 299)
texture = ExtResource("2_be50o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -505.0
offset_top = -95.0
offset_right = -232.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("3_u5y8d")
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u5y8d")
theme_override_font_sizes/font_size = 40
text = "Continue"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u5y8d")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Tiny" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(602, 109)
texture = ExtResource("4_cl88h")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
